Add references to Rmd and bib file

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -21,6 +21,16 @@ Data, and Methods},
   year = {2020}
 }
 
+@article{Bjarnason2012,
+  author = {Bjarnason, Elizabeth and Wnuk, Krzysztof and Regnell, Bj{\"{o}}rn},
+  doi = {10.1016/j.infsof.2012.04.006},
+  journal = {Inf. Softw. Technol.},
+  number = {10},
+  pages = {1107--1124},
+  title = {{Are you biting off more than you can chew? A case study on causes and effects of overscoping in large-scale software engineering}},
+  volume = {54},
+  year = {2012}
+}
 
 @techreport{Bowlby2013EF,
   author = {Bowlby, H. D. and Gibson, A.J.F. and Levy, A.},
@@ -34,6 +44,17 @@ year = {2013}
   title = {Review of DFO Science information for Atlantic salmon (Salmo salar) populations in the eastern Cape Breton region of Nova Scotia, 2009 – Table 3.2.2.},
 howpublished = {Retrieved from https://waves-vagues.dfo-mpo.gc.ca/Library/339227.pdf},
 year = {2009}
+}
+
+@article{Cleary2020,
+  author = {Cleary, Michelle and Schafer, Corriann and McLean, Loyola and Visentin, Denis C},
+  doi = {10.1080/01612840.2019.1701937},
+  journal = {Issues Ment. Health Nurs.},
+  number = {2},
+  pages = {172--175},
+  title = {{Mental Health and Well-Being in the Health Workplace}},
+  volume = {41},
+  year = {2020}
 }
 
 @misc{GBIF,
@@ -395,6 +416,17 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
   pages = {439--446},
   volume = {10},
   number = {1},
+}
+
+@article{Sigahi2021,
+  author = {Sigahi, Tiago F A C and Kawasaki, Bruno C and Bolis, Ivan and Morioka, Sandra N},
+  doi = {10.1002/hfm.20889},
+  journal = {Hum. Factors. Ergon. Manuf.},
+  number = {4},
+  pages = {375--388},
+  title = {{A systematic review on the impacts of Covid-19 on work: Contributions and a path forward from the perspectives of ergonomics and psychodynamics of work}},
+  volume = {31},
+  year = {2021}
 }
 
 @Manual{stars,
