--- a/reports/Modus-operandi-RAP.Rmd
+++ b/reports/Modus-operandi-RAP.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(echo = TRUE)
 The Strategic Science Planning and Program Integrity (SSPPI) division in DFO Maritimes supports various projects and presents many opportunities to modernize data management and reporting practices. In 2018, requests to the division to identify and summarize the available DFO and non-DFO datasets within the Maritimes Region were becoming increasingly frequent. Born out of frustration and a need for swift and effective approaches, a team of self-proclaimed Strategic Reproducible Analytical Pipeline (RAP) Champions was formed to automate the creation of these Reports. The primary objective of this initiative has been to develop a web-based tool to generate Reproducible Reports to identify and describe DFO and non-DFO datasets within a user-defined geographic area. Specifically, this project address internal requests that support processes that provide frequent and standardized advice, such as CSAS, Marine Spatial Planning, Aquaculture Siting Responses, and Environmental Response, which have an emphasis on Species at Risk.
 
 
-As Strategic RAP Champions, we strive for an open and understanding culture within our group. How we implement this is constantly evolving and changing. However, we believe that digital tools can enhance the work we do to effectively collaborate with a growing network of internal and external partners (including organizations outside of Canada). Our focus on co-creation remains key for prioritization and accountability, to ensure that our work is truly helpful to DFO. We also value the continued advancement of new skills, intrinsic curiosity, and the pursuit of new opportunities, and this has been a major factor in our success in overcoming various frustrating obstacles. We acknowledge that there is no perfect balance for managing these competing and conflicting tasks and interests, but this can be at least partially remedied by continuous scope prioritization and close cooperation within our team [@Bjarnason2012]. Although we are highly ambitious, we consider it especially important to have reasonable expectations for ourselves and team members, given the backdrop of the COVID-19 pandemic, and other challenging personal and global events that can hinder workplace productivity and wellbeing [@Cleary2020, @Sigahi2021].
+As Strategic RAP Champions, we strive for an open and understanding culture within our group. How we implement this is constantly evolving and changing. However, we believe that digital tools can enhance the work we do to effectively collaborate with a growing network of internal and external partners (including organizations outside of Canada). Our focus on co-creation remains key for prioritization and accountability, to ensure that our work is truly helpful to DFO. We also value the continued advancement of new skills, intrinsic curiosity, and the pursuit of new opportunities, and this has been a major factor in our success in overcoming various frustrating obstacles. We acknowledge that there is no perfect balance for managing these competing and conflicting tasks and interests, but this can be at least partially remedied by continuous scope prioritization and close cooperation within our team [@Bjarnason2012]. Although we are highly ambitious, we consider it especially important to have reasonable expectations for ourselves and team members, given the backdrop of the COVID-19 pandemic, and other challenging personal and global events that can hinder workplace productivity and well-being [@Cleary2020, @Sigahi2021].
 
 This document takes inspiration from discussions, brainstorming sessions, [examples from successful companies](/company/culture/all-remote/remote-work-report/), as well as learning and development opportunities. We have adopted lots of ideas from the [GitLab's Guide to All-Remote](https://about.gitlab.com/company/culture/all-remote/guide/) to craft our own guide to keep improving the way we work and support each other.
 
@@ -30,7 +30,7 @@ This document takes inspiration from discussions, brainstorming sessions, [examp
 
 -   Our intention is to share how we do our work and how we support each other. We love sharing our solutions to complex problems. This guide, however, is not intended as a prescriptive guide for other teams.
 -   Many sections from this document are verbatim of other initiatives/sites, with minor edits to adjust it to our own context. All credit belongs to the original source (primarily, GitLab's documentation). If anybody believes this to be not fair use, we will take this down immediately.
--   This guide draws inspiration from all-remote organizations; however, we are not advocating for all-remote structure (e.g. we want to participate in croquet tournaments at [BIO](https://www.bio.gc.ca/index-en.php)).
+-   This guide draws inspiration from all-remote organizations; however, we are not advocating for all-remote structure (e.g., we want to participate in croquet tournaments at [BIO](https://www.bio.gc.ca/index-en.php)).
 
 ## Strategic RAP Champions: who are we?
 
@@ -38,10 +38,10 @@ This section is a modified version of the [RAP champions network in the UK](http
 
 Strategic RAP champions support the implementation of reproducible analytical pipelines at DFO. This includes:
 
--   Promoting reproducible analysis (i.e. analysis with a clear audit trail that explains how and why it was carried out),
--   Actively using reproducible analytical pipelines (i.e. the software methods used to make analysis reproducible),
+-   Promoting reproducible analysis (i.e., analysis with a clear audit trail that explains how and why it was carried out),
+-   Actively using reproducible analytical pipelines (i.e., the software methods used to make analysis reproducible),
 -   Sharing knowledge and providing advice and support to members of the analytical community who want to learn about, and implement, reproducible analysis and reproducible analytical pipelines.
--   Using platforms like GitHub or GItLab to share code so others can learn, use and/or adapt what has been done.
+-   Using platforms like GitHub or GitLab to share code so others can learn, use and/or adapt what has been done.
 
 As Strategic RAP Champions:
 
@@ -58,12 +58,12 @@ This section is a modified version of the [GitLab's manifesto](https://about.git
 -   Working and collaborating with a large network of partners from different places (instead of from a central location).
 -   Formal communication channels (over informal communication channels).
 -   Writing down and recording knowledge (over verbal explanations).
--   Written processes (to compliment over on-the-job training).
+-   Written processes (to complement over on-the-job training).
 -   Public sharing of information (over need-to-know access).
 -   Opening up documents for editing by anyone (over top-down control of documents).
 -   Asynchronous communication (over synchronous communication).
 -   Flexible working hours (over set working hours, within the scope of our job description).
--   The results of work (over micro-management of the hours put in).
+-   The results of work (over micromanagement of the hours put in).
 
 ## How we work and how we communicate information
 
