more grammar/formatting edits

--- a/reports/Modus-operandi-RAP.Rmd
+++ b/reports/Modus-operandi-RAP.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(echo = TRUE)
 The Strategic Science Planning and Program Integrity (SSPPI) division in DFO Maritimes supports various projects and presents many opportunities to modernize data management and reporting practices. In 2018, requests to the division to identify and summarize the available DFO and non-DFO datasets within the Maritimes Region were becoming increasingly frequent. Born out of frustration and a need for swift and effective approaches, a team of self-proclaimed Strategic Reproducible Analytical Pipeline (RAP) Champions was formed to automate the creation of these Reports. The primary objective of this initiative has been to develop a web-based tool to generate Reproducible Reports to identify and describe DFO and non-DFO datasets within a user-defined geographic area. Specifically, this project address internal requests that support processes that provide frequent and standardized advice, such as CSAS, Marine Spatial Planning, Aquaculture Siting Responses, and Environmental Response, which have an emphasis on Species at Risk.
 
 
-As Strategic RAP Champions, we strive for an open and understanding culture within our group. How we implement this is constantly evolving and changing. However, we believe that digital tools can enhance the work we do to effectively collaborate with a growing network of internal and external partners (including organizations outside of Canada). Our focus on co-creation remains key for prioritization and accountability, to ensure that our work is truly helpful to DFO. We also value the continued advancement of new skills, intrinsic curiosity, and the pursuit of new opportunities, and this has been a major factor in our success in overcoming various frustrating obstacles. We acknowledge that there is no perfect balance for managing these competing and conflicting tasks and interests, but this can be at least partially remedied by continuous scope prioritization and close cooperation within our team [@Bjarnason2012]. Although we are highly ambitious, we consider it especially important to have reasonable expectations for ourselves and team members, given the backdrop of the COVID-19 pandemic, and other challenging personal and global events that can hinder workplace productivity and well-being [@Cleary2020, @Sigahi2021].
+As Strategic RAP Champions, we strive for an open and understanding culture within our group. How we implement this is constantly evolving and changing. However, we believe that digital tools can enhance the work we do to effectively collaborate with a growing network of internal and external partners (including organizations outside of Canada). Our focus on co-creation remains key for prioritization and accountability, to ensure that our work is truly helpful to DFO. We also value the continued advancement of new skills, intrinsic curiosity, and the pursuit of new opportunities, and this has been a major factor in our success in overcoming various frustrating obstacles. We acknowledge that there is no perfect balance for managing these competing and conflicting tasks and interests, but this can be at least partially remedied by continuous scope prioritization and close cooperation within our team [@Bjarnason2012]. Although we are highly ambitious, we consider it especially important to have reasonable expectations for ourselves and team members, given the backdrop of the COVID-19 pandemic, and other challenging personal and global events that can hinder workplace productivity and well-being [@Cleary2020; @Sigahi2021].
 
 This document takes inspiration from discussions, brainstorming sessions, [examples from successful companies](/company/culture/all-remote/remote-work-report/), as well as learning and development opportunities. We have adopted lots of ideas from [GitLab's Guide to All-Remote](https://about.gitlab.com/company/culture/all-remote/guide/) to craft our own guide to keep improving the way we work and support each other.
 
@@ -79,7 +79,7 @@ This section includes material from the course [How to Manage a Remote Team](htt
 
 ## Our Tools
 
-The above mentioned components are mostly extracted from GitLab's training material. We have started a pilot in our team to explore how to test and adopt many of these principles, with appropriate tools. We are concerned about tool overload and their long-lasting usefulness. We will continue to adopt lessons learned, we are committed to re-think ideas, and we will continue to share our lessons learned.
+The components mentioned above are mostly extracted from GitLab's training material. We have started a pilot in our team to explore how to test and adopt many of these principles, with appropriate tools. We are concerned about tool overload and their long-lasting usefulness. We will continue to adopt lessons learned, we are committed to re-think ideas, and we will continue to share our lessons learned.
 
 Currently, our key collaborations tools include:
 
