--- a/reports/sections/permits/permits_en.Rmd
+++ b/reports/sections/permits/permits_en.Rmd
@@ -80,7 +80,7 @@ Report_permit = noquote(Report_permit)
 writeLines(Report_permit)
 ```
 
-```{r permit-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(permits_rr, "EN"), 'Map of species records obtained from the Species at Risk Act (SARA) Section 73 permits (black circles) observed within the search area (red outline). Permits are not created for species of special concern. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
+```{r permit-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(permits_rr, "EN"), 'Map of species records obtained from the Species at Risk Act (SARA) Section 73 permits (black circles) observed within the search area (red outline). Permits are not created for species of special concern. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
 if (!is.null(outputList$studyData)) {
   plot_rr_sf(areaMap, outputList$mapData)
 }
