--- a/app/templates/EN/generic_intro.Rmd
+++ b/app/templates/EN/generic_intro.Rmd
@@ -44,7 +44,7 @@ This document compiles and summarizes regional data to increase reporting effici
 
 The datasets summarized in this report have been compiled from a variety of sources including internal DFO databases, governmental and academic research labs, and open-source databases. This report will be continuously updated as new sources become available. These data comprise a variety of types (e.g., points, vector datasets, raster information), with the primary focus being species presence. However, recognizing the importance of considering ecosystem-based approaches for management, this report also includes information on ecosystem components (e.g., coastal habitat), areas designated for spatial planning (e.g., Ecologically and Biologically Significant Areas), and human activities,
 
-Data summaries and products (e.g., plots and tables) are presented in the report with source descriptions, caveats, disclaimers, sources of uncertainty, references to the literature, and contacts who can provide further interpretation. Currently, the report has the ability to report information from different sources and themes. Also, not all sections may be available in each report created as users have the ability to interactively select the modules to be included.
+Data summaries and products (e.g., plots and tables) are presented in the report with source descriptions, caveats, disclaimers, sources of uncertainty, references to the literature, and contacts who can provide further interpretation. Currently, the report has the ability to summarize information from different sources and themes. Also, not all sections may be available in each rendered report, since users have the ability to interactively select the modules to be included.
 
 
 ```{r area-map-plot, fig.height=8, fig.width=11, fig.show="hold", out.width="50%", fig.cap="Map showing the search area defined by the user (red outline) to query information and automatically generate this report (left).  Map showing the study area's location relative to the DFO Maritimes Region (right).  Dashed grey line indicates international boundries."}
