add Rule of Five reference

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -73,6 +73,13 @@ Data, and Methods},
   year = {2020}
 }
 
+@Manual{DFO2020_RuleOfFive,
+  author = {DFO},
+  title = {{Evaluation of Economic Analysis and Statistics: Final Report. Project number 96261}},
+  year = {2020},
+  url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40914069.pdf},
+}
+
 @techreport{DFO2020_Turtles,
   author = {DFO},
   title = {Threat Assessment for the Leatherback Sea Turtle (Dermochelys coriacea), Northwest Atlantic Subpopulation},
