add robis and rgbif to the References

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -424,12 +424,29 @@ Data, and Methods},
   url = {https://CRAN.R-project.org/package=RCurl}
 }
 
+@Manual{rgbif,
+    title = {R Python, and Ruby clients for GBIF species occurrence data},
+    author = {Scott Chamberlain and Carl Boettiger},
+    journal = {PeerJ PrePrints},
+    year = {2017},
+    publisher = {PeerJ, Inc.},
+    url = {https://doi.org/10.7287/peerj.preprints.3304v1},
+  }
+
 @Manual{rgdal,
   title = {rgdal: Bindings for the 'Geospatial' Data Abstraction Library},
   author = {Roger Bivand and Tim Keitt and Barry Rowlingson},
   year = {2021},
   note = {R package version 1.5-23},
   url = {https://CRAN.R-project.org/package=rgdal}
+}
+
+@Manual{robis,
+  title = {robis: Ocean Biodiversity Information System (OBIS) Client},
+  author = {Pieter Provoost and Samuel Bosch},
+  year = {2021},
+  note = {R package version 2.8.2},
+  url = {https://CRAN.R-project.org/package=robis}
 }
 
 @Article{sf,
