Add vandepitte reference that talks about OBIS QA/QC!

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -495,6 +495,15 @@ Data, and Methods},
   doi = {10.21105/joss.01686}
 }
 
+@Article{vandepitte,
+  title={Fishing for data and sorting the catch: assessing the data quality, completeness and fitness for use of data in marine biogeographic databases},
+  author={Vandepitte, Leen and Bosch, Samuel and Tyberghein, Lennert and Waumans, Filip and Vanhoorne, Bart and Hernandez, Francisco and De Clerck, Olivier and Mees, Jan},
+  journal={Database},
+  volume={2015},
+  year={2015},
+  publisher={Oxford Academic}
+}
+
 @misc{whalemap,
   author = {Johnson, HD [App]},
   title = {WhaleMap},
