I really don't think this matters but there are so many weird spacing issues that keeps showing up

--- a/reports/sections/obis/obis-supplementary_en.Rmd
+++ b/reports/sections/obis/obis-supplementary_en.Rmd
@@ -69,8 +69,7 @@ iNaturalist [-@iNaturalist] is an open-source platform where naturalists, citize
 iNaturalist records include a coordinate uncertainty, which is added by the user to provide an estimation of the geopositional accuracy of the observation. This may reflect information such as the accuracy of the user's phone's GPS, or an estimation of error if an observation was spotted from a distance
 (<https://greece.inaturalist.org/posts/28376-making-yourobservations-more-valuable-for-conservation-location-uncertainty>).
 
-For species that may be put at risk if their true location is known (e.g., due to hunting or poaching), the location can be obscured, either at the request of the submitter, or done automatically by iNaturalist. iNaturalist moderators may obscure a species location if the species has a certain conservation status (e.g., the International Union for Conservation of Nature, IUCN, equivalent of "Near
-Threatened" or worse), or based on local knowledge of the species in the region (<https://www.inaturalist.org/pages/curator+guide>). For species with obscured locations, a random location within a 0.2 x 0.2 degree cell (\~22 km x 22 km) is generated (<https://www.inaturalist.org/pages/help#geoprivacy>). In GBIF, it is not explicitly stated if the species position has been obscured, but can implied if the coordinate uncertainty is \~22 km.
+For species that may be put at risk if their true location is known (e.g., due to hunting or poaching), the location can be obscured, either at the request of the submitter, or done automatically by iNaturalist. iNaturalist moderators may obscure a species location if the species has a certain conservation status (e.g., the International Union for Conservation of Nature, IUCN, equivalent of "Near Threatened" or worse), or based on local knowledge of the species in the region (<https://www.inaturalist.org/pages/curator+guide>). For species with obscured locations, a random location within a 0.2 x 0.2 degree cell (\~22 km x 22 km) is generated (<https://www.inaturalist.org/pages/help#geoprivacy>). In GBIF, it is not explicitly stated if the species position has been obscured, but can implied if the coordinate uncertainty is \~22 km.
 
 Due to these issues with the coordinate uncertainty, occurrence records from iNaturalist data are listed separately within the GBIF data section, and the associated coordinate uncertainty is provided.
 
